Finally figured out how to properly position the profile photo using float-right, and how to get the text to wrap around it. The issue wasn't necessarily with the HTML structure of our code, rather with the fact that the container of the profile class (which itself contains the img tag) was a flex container, which negated the use of float right in its children.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -38,25 +38,27 @@
 }
 
 .profile-bio {
-  display:flex;
-  justify-content: space-between;
-  align-items:flex-start;
+  // display:flex;
+  // justify-content: space-between;
+  // align-items:flex-start;
   margin-right: 20px;
   margin-left: 20px;
   .profile {
     // flex: 0 0 auto;
-    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 5px;
+    float:right;
     img{
       border-radius: 3%;
-      // max-width:80%;
+      // max-width: 80%;
       // height:auto;
     }
   }
   .bio{
     text-align:justify;
+    overflow-wrap: break-word;
     #p1{
       margin-top: 0px;
     }
   }
 }
-
